@@ -18,6 +18,7 @@ fixed bugs:
 - fixed bug in NLP representation of abspower constraints handling (x+a)^2 with nonzero a
 - fixed bug parsing an and-constraint in cip format
 - fixed bug in cons_setppc, did not handle new constraints with inactive variables
+- workaround for trying to add variable bounds with to small coefficients
 
 performance improvements:
 - fixed performance issue in debug mode, where SCIPvarGetLPSol_rec() calculated a value to often, which in the end lead
